--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>MY FIRST BLOG</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
 
 <h1>MOURATINA</h1>
 <p>Do you know that Muratina only just became legal in 2018? Yeah just hold on to that before I tell you more about it. It has only been a week since my fiancé and I became official. I cannot help but share my joy here with you. I am still in awe. I named the title as it is because, allow me to get candid with you. The day I met my fiancé he introduced himself as Mouraa. Well of course that is not his actual actual name but it is when you decide to twang the name Mwaura a bit, haha. He told me this and I laughed but ended up getting used to it over the years and I now use it once in a while. <br>
