--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
+<head>
+	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-<head>
-	 <div id="wrapper" class="col-md-12">
-      <div id="header" class="col-md-12">
-        </div>
-       <title>MY FIRST BLOG</title>
-        </div>
+<title>Blog</title>
 </head>
 <body style="background-color:powderblue;">
+	   <div id="wrapper" class="col-md-12">
+      <div id="header" class="col-md-12">
+        </div>
+        <h1>MOURATINA</h1>
+        </div>
 
-<h1>MOURATINA</h1>
-<div class="container">
-	
+
+	<div class="content">
+		
+		<div class="content-wrapper">
+
+			<div id="first-content" class="content-item">
+
+				<div id="first-image">
+					<div id="image-wrapper">
+						 <img id="imgtop" src="images/sweerie.jpg" alt="sweerie img">
+						
+					</div>
+					
+				</div>
+			</div>
+			
+		</div>
+		
+	</div>
 
 <p>Do you know that Muratina only just became legal in 2018? Yeah just hold on to that before I tell you more about it. It has only been a week since my fiancé and I became official. I cannot help but share my joy here with you. I am still in awe. I named the title as it is because, allow me to get candid with you. The day I met my fiancé he introduced himself as Mouraa. Well of course that is not his actual actual name but it is when you decide to twang the name Mwaura a bit, haha. He told me this and I laughed but ended up getting used to it over the years and I now use it once in a while. <br>
 So why am I telling you this? Like I said we just recently became one so you can now easily refer to us as MouraTina. Don’t ask me, but my Big Ted tends to be creative. To be honest, I have never before been so anxious and happy at the same time in my life. So many people showed up for us. More than expected. In earlier years of my life I know that I have bestowed courage and bravery and have expressed so a couple of times but this no. I cannot explain the feeling. In this our Gikuyu culture the lady is only unveiled by her fiancé only later on after the guests have eaten and introduced themselves. This was after probably 2hours later after the visitor’s arrival. You might as well just call me Rapunzel. Because I was feeling locked away in a tower awaiting Big Ted.<br>
@@ -31,6 +48,5 @@ Water also had its purpose. We know that the land cannot be fertile without rain
 I want to blow your mind and lastly tell you about the Murats fruit. They are fruits that we don’t harvest. When I say we I mean the kikuyus, because I am proud to be a member even if I don’t practically do this. You can’t go picking up the fruits from the tree. But when it falls you pick it up and then use it for its intended purpose. I know the question you have in mind? What if you harvest it? And want to use it? Well, if you want to harvest it, it can only be used in for leisure. A muratina fruit looks like a sausage and has many seeds inside. It falls on its own and its back hardens. It cannot be eaten by ants etc. So, may you grow old and not die prematurely, and even after you fall and pass may you have left offsprings because the seeds in the fruit signify that. I know you thought you were probably laugh and talk about the drunken us and blablabla. ha shock on you<br>
 When I think about all these things and how they have been blessed upon my life I am yet to wonder how it is it really can be compared to scotch or rather alcohol? With all these blessings declared upon our lives haven’t we already received them? All we have to do is only work towards them and just basically do what we should like Big Ted keeps telling me. We are entitled to abundance and may we never forget that.<br>
 </p>
-</div>
 </body>
 </html>
