--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<div id="first-image">
 					<div id="image-wrapper">
-						 <img id="imgtop" src="images/sweerie.jpg" alt="sweerie img">
+						 <img id="imgtop" src="images/mouratina.jpg" alt="sweerie img">
 						
 					</div>
 					
