--- a/index.html
+++ b/index.html
@@ -10,33 +10,37 @@
     <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 <title>Blog</title>
 </head>
-<body style="background-color:powderblue;">
-	   <div id="wrapper" class="col-md-12">
-      <div id="header" class="col-md-12">
-        </div>
-        <h1>MOURATINA</h1>
-        </div>
+<body>
+	<div class="container">
+		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/mouratina.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/mouraa.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/tinamouraa.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+	</div>
+	  
 
-
-	<div class="card" style="width: 18rem;">
-<!--   <img id="imgtop" img src="images/mouratina.jpg" class="card-img-top" alt="...">
- -->  <div class="card-body">
-    <h5 class="card-title">OLA</h5>
-    <p class="card-text">
-Do you know that Muratina only just became legal in 2018? Yeah just hold on to that before I tell you more about it. It has only been a week since my fiancé and I became official. I cannot help but share my joy here with you. I am still in awe. I named the title as it is because, allow me to get candid with you. The day I met my fiancé he introduced himself as Mouraa. Well of course that is not his actual actual name but it is when you decide to twang the name Mwaura a bit, haha. He told me this and I laughed but ended up getting used to it over the years and I now use it once in a while. 
-So why am I telling you this? Like I said we just recently became one so you can now easily refer to us as MouraTina. Don’t ask me, but my Big Ted tends to be creative. To be honest, I have never before been so anxious and happy at the same time in my life. So many people showed up for us. More than expected. In earlier years of my life I know that I have bestowed courage and bravery and have expressed so a couple of times but this no. I cannot explain the feeling. In this our Gikuyu culture the lady is only unveiled by her fiancé only later on after the guests have eaten and introduced themselves. This was after probably 2hours later after the visitor’s arrival. You might as well just call me Rapunzel. Because I was feeling locked away in a tower awaiting Big Ted.</p>
 
 
  
-  </div>
-</div>
 
-          </div>
-        </div>
-			
-		</div>
-		
-	</div>
+
 
 <!-- <p>Do you know that Muratina only just became legal in 2018? Yeah just hold on to that before I tell you more about it. It has only been a week since my fiancé and I became official. I cannot help but share my joy here with you. I am still in awe. I named the title as it is because, allow me to get candid with you. The day I met my fiancé he introduced himself as Mouraa. Well of course that is not his actual actual name but it is when you decide to twang the name Mwaura a bit, haha. He told me this and I laughed but ended up getting used to it over the years and I now use it once in a while. <br>
 So why am I telling you this? Like I said we just recently became one so you can now easily refer to us as MouraTina. Don’t ask me, but my Big Ted tends to be creative. To be honest, I have never before been so anxious and happy at the same time in my life. So many people showed up for us. More than expected. In earlier years of my life I know that I have bestowed courage and bravery and have expressed so a couple of times but this no. I cannot explain the feeling. In this our Gikuyu culture the lady is only unveiled by her fiancé only later on after the guests have eaten and introduced themselves. This was after probably 2hours later after the visitor’s arrival. You might as well just call me Rapunzel. Because I was feeling locked away in a tower awaiting Big Ted.<br>
